Fix css for search address input styling

--- a/assets/css/woogosend-admin.css
+++ b/assets/css/woogosend-admin.css
@@ -21,7 +21,8 @@
     padding: 0 11px 0 13px;
     text-overflow: ellipsis;
     width: 600px;
-    max-width: 100%; }
+    max-width: 100%;
+    margin-top: 10px !important; }
     .woogosend-map-wrapper .woogosend-map-search:focus {
       border-color: #4d90fe; }
 
