--- a/assets/scss/woogosend-admin.scss
+++ b/assets/scss/woogosend-admin.scss
@@ -24,6 +24,7 @@
         text-overflow: ellipsis;
         width: 600px;
         max-width: 100%;
+        margin-top: 10px !important;
         &:focus {
             border-color: #4d90fe;
         }
