--- a/assets/src/scss/backend.scss
+++ b/assets/src/scss/backend.scss
@@ -1,343 +1,373 @@
 /* Begin Import */
 
 @import 'color';
+
 /* End Import */
 
-/* Begin Stylings */
+.wc-backbone-modal-header h1 span {
+  &:before {
+    content: "» ";
+  }
+}
 
 .woogosend {
-    &-hidden {
-        display: none;
+  &-hidden {
+    display: none;
 
-        &.button {
-            display: none;
+    &.button {
+      display: none;
+    }
+  }
+
+  &-no-padding {
+    padding: 0 !important;
+  }
+
+  &-link {
+    text-align: center;
+    text-decoration: none;
+    width: 70px;
+
+    &--sort {
+      cursor: not-allowed;
+      opacity: 0.3;
+      pointer-events: none;
+
+      .woogosend-sort-enabled & {
+        opacity: 1;
+        cursor: move;
+        pointer-events: inherit;
+      }
+    }
+
+    &:active,
+    &:focus {
+      box-shadow: none;
+      text-decoration: none;
+    }
+  }
+
+  &-edit-api-key {
+    .dashicons:before {
+      content: "\f464";
+    }
+  }
+
+  &-edit-api-key.editing {
+    .dashicons:before {
+      content: "\f147";
+    }
+  }
+
+  &-edit-api-key.loading {
+    .dashicons {
+      animation: rotation 1s infinite linear;
+
+      &:before {
+        content: "\f113";
+      }
+    }
+  }
+
+  &-fullwidth:not(a) {
+    display: block;
+    width: 100% !important;
+  }
+
+  &-buttons {
+    &-item {
+      &.button-large {
+        .dashicons {
+          margin-top: 5px;
+
+          &:before {
+            font-size: 1em;
+          }
         }
+      }
+
+      &--left {
+        float: left;
+      }
     }
 
-    &-no-padding {
-        padding: 0 !important;
-    }
+    &--has-icon {
+      position: relative;
 
-    &-spinner {
-        float: none;
-        margin-top: 0;
-        margin-left: 7px;
-    }
-
-    &-link {
-        text-decoration: none;
-        text-align: center;
-
-        &:active,
-        &:focus {
-            text-decoration: none;
-            box-shadow: none;
-        }
-
-        &.woogosend-edit-api-key,
-        &.woogosend-edit-location {
-            width: 60px;
-        }
-    }
-
-    &-edit-api-key.editing .dashicons-edit {
-        display: none;
-    }
-
-    &-edit-api-key:not(.editing) .dashicons-yes {
-        display: none;
-    }
-
-    &-edit-api-key.loading .dashicons {
-        display: none;
-    }
-
-    &-edit-api-key:not(.loading) .spinner {
-        display: none;
-    }
-
-    &-edit-api-key.loading .spinner {
-        visibility: visible;
-    }
-
-    &-fullwidth:not(a) {
-        display: block;
-        width: 100% !important;
-    }
-
-    &-buttons {
-        &-item {
-            &.button-large {
-                .dashicons {
-                    margin-top: 5px;
-
-                    &:before {
-                        font-size: 1em;
-                    }
-                }
-            }
-
-            &--left {
-                float: left;
-            }
-        }
-    }
-
-    &-field {
-        &:disabled {
-            background: $alabaster;
-        }
-
-        &-type--title {
-            padding-left: 14px !important;
-
-            &~p {
-                padding-left: 14px !important;
-            }
-        }
-
-        &-group-wrap {
-            padding-top: 1px;
-            margin-bottom: 1em;
-            box-shadow: 0px 0px 1px 0px rgba($black, 0.1);
-
-            >.form-table {
-                border-top: 1px solid $alabaster;
-                box-shadow: 0px -1px 0px 0px rgba($black, 0.1);
-            }
-
-            &--api_key_instruction,
-            &--location_picker,
-            &--advanced_rate {
-                >h3 {
-                    text-align: center;
-                }
-            }
-        }
-    }
-
-    &-table {
-        &--table_rates--dummy {
-            max-width: 100%;
-
-            tr {
-                .woogosend-col {
-                    box-sizing: border-box;
-                    background-color: $white;
-
-                    &--select-item {
-                        width: 50px;
-                        text-align: center;
-
-                        input {
-                            margin: 0;
-                            padding: 0;
-                        }
-                    }
-
-                    &--link_advanced {
-                        width: 96px;
-                        text-align: center;
-                    }
-
-                    &+.woogosend-col {
-                        border-left: 1px solid $seashell;
-                    }
-                }
-            }
-
-            thead {
-                tr {
-                    .woogosend-col {
-                        font-weight: 600;
-                    }
-                }
-            }
-
-            tbody {
-                tr {
-                    .woogosend-col {
-                        padding-top: 9px !important;
-                        padding-bottom: 9px !important;
-                    }
-
-                    &.highlighted {
-                        .woogosend-col {
-                            animation: highlighted 0.5s infinite;
-                        }
-                    }
-
-                    &:nth-child(odd) {
-                        .woogosend-col {
-                            background-color: rgba($anakiwa, 0.1);
-                        }
-                    }
-
-                    &:nth-child(even) {
-                        .woogosend-col {
-                            background-color: $white;
-                        }
-                    }
-
-                    &:last-child {
-
-                        td,
-                        th {
-                            border-bottom: 0px solid rgba($alabaster, 0) !important;
-                        }
-                    }
-
-                    &:hover {
-                        .woogosend-col {
-                            background-color: rgba($anakiwa, 0.2);
-                        }
-                    }
-
-                    .woogosend-field--context--dummy:not(a) {
-                        min-width: 100px !important;
-                    }
-                }
-            }
-        }
-
-        &--advanced_rate {
-            .woogosend-no-padding {
-                .woogosend-field-type--title {
-                    margin-top: 0;
-                    margin-bottom: 0;
-                    padding-top: 5px;
-                    padding-bottom: 5px;
-                    background: rgba($alabaster, 0.6);
-                    border-top: 1px solid $alabaster;
-                    border-bottom: 1px solid $alabaster;
-                }
-
-                .form-table {
-                    border-top: 1px solid $alabaster;
-                    margin-bottom: 0 !important;
-                }
-            }
-        }
-    }
-
-    &-map-instructions {
-        background-color: $double-pearl-lusta;
-        border: 1px solid darken($double-pearl-lusta, 20%);
-        text-align: center;
-        padding: 30px 30px;
-        max-width: 760px;
-        margin: 50px auto 50px;
-        border-radius: 5px;
-
-        img {
-            display: block;
-            margin: 20px auto 0;
-            max-width: 100%;
-            width: 100%;
-        }
-    }
-
-    &-map-wrap {
-        position: relative;
-        padding: 0;
-    }
-
-    &-map-canvas {
-        height: 450px;
-    }
-
-    &-map-error {
-        text-align: center;
-        padding-top: 100px;
-    }
-
-    &-map-search-panel {
-        margin: 10px;
+      .dashicons {
+        width: 20px;
+        height: 20px;
         position: absolute;
-        top: 10px;
-        left: 10px;
+        left: 50%;
+        top: 50%;
+        margin-top: -10px;
+        margin-left: -10px;
+      }
+    }
+  }
 
-        .woogosend-map-search-element {
-            margin: 0;
-            line-height: 1;
-            float: left;
+  &-field {
+    &:disabled {
+      background: $alabaster;
+    }
+
+    &-type--title {
+      padding-left: 14px !important;
+
+      &~p {
+        padding-top: 8px !important;
+        margin: 14px !important;
+        border-top: 1px solid $iron;
+      }
+    }
+
+    &-group-wrap {
+      padding-top: 1px;
+      margin-bottom: 1em;
+
+      >.wc-settings-sub-title:not(.woogosend-hidden) {
+        &~.form-table {
+          border-top: 1px solid $iron !important;
+          border-bottom: 1px solid $iron !important;
         }
+      }
+    }
+  }
 
-        #woogosend-map-search-input {
-            width: 540px !important;
-            max-width: calc(100% - 60px) !important;
-            height: 40px !important;
-            display: none;
-            transition: all 2s ease;
-        }
+  &-table {
+    &--table_rates--dummy {
+      max-width: 100%;
 
-        #woogosend-map-search-panel-toggle {
-            width: 40px !important;
-            height: 40px !important;
-            display: block;
-            cursor: pointer;
-            background-color: $white;
-        }
+      tr {
+        .woogosend-col {
+          background-color: $white;
+          box-sizing: border-box;
 
-        &.expanded {
-            #woogosend-map-search-input {
-                display: block;
+          &--select-item {
+            text-align: center;
+            width: 50px;
+
+            input {
+              margin: 0;
+              padding: 0;
             }
-        }
+          }
 
-        &:after {
-            clear: both;
+          &--link_advanced {
+            text-align: center;
+            width: 96px;
+          }
+
+          &--link_sort {
+            text-align: center;
+            width: 60px;
+          }
+
+          &+.woogosend-col {
+            border-left: 1px solid $seashell;
+          }
         }
+      }
+
+      thead {
+        tr {
+          .woogosend-col {
+            font-weight: 600;
+          }
+        }
+      }
+
+      tbody {
+        tr {
+          .woogosend-col {
+            padding-bottom: 9px !important;
+            padding-top: 9px !important;
+          }
+
+          &.selected {
+            .woogosend-link {
+              opacity: 0.4;
+              pointer-events: none;
+            }
+          }
+
+          &.highlighted {
+            .woogosend-col {
+              animation: highlighted 0.5s infinite;
+            }
+          }
+
+          &:nth-child(odd) {
+            .woogosend-col {
+              background-color: rgba($anakiwa, 0.1);
+            }
+          }
+
+          &:nth-child(even) {
+            .woogosend-col {
+              background-color: $white;
+            }
+          }
+
+          &:last-child {
+
+            td,
+            th {
+              border-bottom: 0px solid rgba($alabaster, 0) !important;
+            }
+          }
+
+          &:hover {
+            .woogosend-col {
+              background-color: rgba($anakiwa, 0.2);
+            }
+          }
+
+          .woogosend-field--context--dummy:not(a) {
+            min-width: 100px !important;
+          }
+        }
+      }
     }
 
-    &-map-search-input {
+    &--advanced_rate {
+      .woogosend-no-padding {
+        .woogosend-field-type--title {
+          margin-bottom: 0;
+          margin-top: 0;
+          padding-bottom: 5px;
+          padding-top: 5px;
+          background: $seashell;
+          background: linear-gradient(to bottom, $seashell 0%, lighten($seashell, 3%) 47%, lighten($seashell, 3%) 53%, $seashell 100%);
+          border: 1px solid $seashell;
+          font-size: 1.1em;
+        }
+
+        .form-table {
+          margin-bottom: 0 !important;
+        }
+      }
+    }
+  }
+
+  &-map-wrap {
+    padding: 0;
+    position: relative;
+  }
+
+  &-map-canvas {
+    height: 450px;
+  }
+
+  &-map-search-panel {
+    left: 10px;
+    margin: 10px;
+    position: absolute;
+    top: 10px;
+
+    .woogosend-map-search-element {
+      float: left;
+      line-height: 1;
+      margin: 0;
+    }
+
+    #woogosend-map-search-input {
+      display: none;
+      height: 40px !important;
+      max-width: calc(100% - 60px) !important;
+      transition: all 2s ease;
+      width: 540px !important;
+    }
+
+    #woogosend-map-search-panel-toggle {
+      background: none rgb(255, 255, 255);
+      box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 4px -1px;
+      cursor: pointer;
+      display: block;
+      height: 40px !important;
+      width: 40px !important;
+
+      .dashicons {
+        &:before {
+          content: "\f179";
+        }
+      }
+    }
+
+    &.expanded {
+      #woogosend-map-search-input {
         display: block;
-        margin: 10px 0 0;
-        border-radius: 0;
-        height: 36px;
+      }
+
+      #woogosend-map-search-panel-toggle {
+        .dashicons {
+          &:before {
+            content: "\f171";
+          }
+        }
+      }
     }
 
-    &-map-pin-info {
-        padding: 0 5px;
-        margin-bottom: 5px;
-        font-weight: 700;
-        position: relative;
+    &:after {
+      clear: both;
+    }
+  }
+
+  &-map-search-input {
+    border-radius: 0;
+    display: block;
+    height: 36px;
+    margin: 10px 0 0;
+  }
+
+  &-error-box {
+    margin: 0 !important;
+    padding-top: 1em;
+    padding-bottom: 1em;
+
+    &.has-margin {
+      margin: 15px !important;
     }
 
-    &-map-pin-info:first-child {
-        margin-top: 10px;
+    p {
+      margin: .1em 0 !important;
+      padding: 2px !important;
     }
-
-    &-map-pin-label {
-        display: inline-block;
-        width: 60px;
-        opacity: 0.6;
-        margin-right: 5px;
-    }
+  }
 }
 
 .pac-container {
-    z-index: 9999999;
+  z-index: 9999999;
 }
 
 @keyframes highlighted {
-    0% {
-        background-color: $white;
-    }
+  0% {
+    background-color: $white;
+  }
 
-    49% {
-        background-color: $white;
-    }
+  49% {
+    background-color: $white;
+  }
 
-    50% {
-        background-color: rgba($anakiwa, 0.3);
-    }
+  50% {
+    background-color: rgba($anakiwa, 0.3);
+  }
 
-    99% {
-        background-color: rgba($anakiwa, 0.3);
-    }
+  99% {
+    background-color: rgba($anakiwa, 0.3);
+  }
 
-    100% {
-        background-color: $white;
-    }
+  100% {
+    background-color: $white;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
