--- a/assets/src/scss/backend.scss
+++ b/assets/src/scss/backend.scss
@@ -19,6 +19,56 @@
 }
 
 .woogosend {
+  &-api-key-input {
+    ~button {
+      width: 40px;
+      position: relative;
+      transform: scale(1);
+      transition: all .2s ease-in-out;
+
+      span {
+        &:before {
+          font-size: 20px;
+          top: 4px;
+          line-height: 1;
+          left: 8px;
+          content: "\f113";
+        }
+      }
+    }
+
+    &:not(.editing) {
+      ~button {
+        height: 0;
+        width: 0;
+        transform: scale(0);
+      }
+    }
+
+    &.loading {
+      ~button {
+        pointer-events: none;
+
+        span {
+          animation: rotation 1s infinite linear;
+        }
+      }
+    }
+
+    &.valid {
+      ~button {
+
+        span {
+          animation: none;
+
+          &:before {
+            content: "\f147";
+          }
+        }
+      }
+    }
+  }
+
   &-hidden {
     display: none;
 
@@ -52,30 +102,6 @@
     &:focus {
       box-shadow: none;
       text-decoration: none;
-    }
-  }
-
-  &-edit-api-key {
-    .dashicons:before {
-      content: "\f464";
-    }
-  }
-
-  &-edit-api-key.editing {
-    .dashicons:before {
-      content: "\f113";
-    }
-  }
-
-  &-edit-api-key.loading {
-    .dashicons {
-      animation: rotation 1s infinite linear;
-    }
-  }
-
-  &-edit-api-key.valid:not(.editing):not(.loading):not(.empty) {
-    .dashicons:before {
-      content: "\f147";
     }
   }
 
@@ -124,6 +150,10 @@
     &-type--title {
       padding-left: 14px !important;
 
+      .dashicons:before {
+        content: "\f113";
+      }
+
       &~p {
         padding-top: 8px !important;
         margin: 14px !important;
@@ -158,6 +188,10 @@
       padding: 0 8px;
       line-height: 2;
       min-height: 30px;
+    }
+
+    &:read-only {
+      background-color: $white !important;
     }
   }
 
